plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.6'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.surfer'
version = '1.0'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //spring web
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    //dev tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    //h2
    runtimeOnly 'com.h2database:h2'
    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // oracle jdbc
    implementation group: 'com.oracle.database.jdbc', name: 'ojdbc11', version: '23.4.0.24.05'
    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    //spring security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    //jwt
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'




    //테스트
    //spring test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    //security test
    implementation 'org.springframework.security:spring-security-test'
    //junit
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

//sourceSets {
//    test {
//        java {
//            exclude '**/*.java' // 모든 테스트 소스 파일을 제외합니다.
//        }
//    }
//}
